Version 20120405
 * Update git submodules when recompiling
 * Fix git clean -dfx not working as intended
Version 20120216
 * General cleanup
 * Add ffmpeg as optdepend
 * Be more verbose while creating the package
Version 20120212
 * Bump version to cause rebuild due to update of pcre
Version 20120209
 * Initial version