@@ -1,12 +1,12 @@
 # Contributor: Feufochmar <feufochmar.gd@gmail.com>
 pkgname=fvkbd-git
-pkgver=20110618
+pkgver=20120412
 pkgrel=1
 pkgdesc="A free and flexible Virtual Keyboard aiming at providing fancy UI and easy to config layout"
 arch=('i686' 'x86_64')
 url="http://gitorious.org/fvkbd/pages/Home"
 license=('LGPL')
-depends=('gtk2' 'libxml2' 'libfakekey')
+depends=('gtk2' 'libxml2' 'libfakekey' 'libunique')
 makedepends=('git')
  
 _gitroot="git://gitorious.org/fvkbd/fvkbd.git"
@@ -28,9 +28,10 @@ build() {
   msg "Starting make..."
   
   cd $srcdir/$_gitname
+ 
   # remove the -Werror flag as there are some variables unused
   find * -name "Makefile.am" | xargs grep -l Werror | xargs sed -i s/-Werror//g
-  #
+ 
   ./autogen.sh
   ./configure --prefix=/usr --sysconfdir=/etc
   
