@@ -1,12 +1,12 @@
 # Contributor: Feufochmar <feufochmar.gd@gmail.com>
 pkgname=fvkbd
 pkgver=0.2.2
-pkgrel=2
+pkgrel=3
 pkgdesc="A free and flexible Virtual Keyboard aiming at providing fancy UI and easy to config layout"
 arch=('i686' 'x86_64')
 url="http://gitorious.org/fvkbd/pages/Home"
 license=('LGPL')
-depends=('gtk2' 'libxml2' 'libfakekey')
+depends=('gtk2' 'libxml2' 'libfakekey' 'libunique')
 makedepends=('git')
 source=( http://gitorious.org/$pkgname/$pkgname/archive-tarball/$pkgver )
  
