@@ -1,20 +1,20 @@
 # Contributor: matthiaskrgr <matthiaskrgr _strange_curverd_character_ freedroid D0T org>
 
 pkgname=gource-git
-pkgver=20120405
+pkgver=20120412
 pkgrel=1
 pkgdesc="software version control visualization"
 license=('GPL3')
 arch=('i686' 'x86_64')
 url="http://code.google.com/p/gource/"
 makedepends=('git' 'autoconf' 'boost' 'glmath')
-depends=('sdl_image' 'pcre' 'glew' 'boost-libs' 'freetype2')
+depends=('sdl_image' 'pcre' 'glew' 'boost-libs' 'freetype2' 'tinyxml')
 optdepends=('ffmpeg: to convert the ppm stream (gource -o) to a video')
 conflicts=('gource')
 provides=('gource')
 changelog=changelog
 source=('changelog')
-sha1sums=('b6eb8840bcbc47d166f7a7e51896ef79a7ba6637')
+sha1sums=('3a8382fcb93861b15a688e374767e90d75e5f4ed')
 
 _gitroot="git://github.com/acaudwell/Gource.git"
 _gitname="gource"
@@ -44,7 +44,7 @@ build() {
 	msg "Running autoreconf..."
 	autoreconf -f -i
 	msg "Running configure..."
-	./configure --prefix=/usr
+	./configure --prefix=/usr --with-tinyxml
 	msg "Running make..."
 	make
 }
