@@ -1,7 +1,7 @@
 # Maintainer: Alessio Sergi <asergi at archlinux dot us>
 
 pkgname=libxnvctrl
-pkgver=295.33
+pkgver=295.40
 pkgrel=1
 pkgdesc="NVIDIA Ctrl X library"
 arch=('i686' 'x86_64')
@@ -9,7 +9,7 @@ url="http://www.nvidia.com/"
 license=('GPL2')
 makedepends=('libx11' 'libxext' 'xextproto')
 source=(ftp://download.nvidia.com/XFree86/nvidia-settings/nvidia-settings-$pkgver.tar.bz2)
-sha256sums=('37128d2a90b22600c2df582c78dcc9d7c3cd1e26b2db8ab81a50a3fc3acfcdba')
+sha1sums=('6fb8c496210a3c0a0f669613014b92930a3d432b')
 
 build() {
   cd "nvidia-settings-$pkgver/src/libXNVCtrl"
