@@ -1,9 +1,9 @@
 # Contributor:	Jussi Timperi	<gmail.com: jussi.timperi>
 # Maintainer:	Jesse Jaara	<gmail.com: jesse.jaara>
 
-pkgbase=suomi-malaga
+#pkgbase=suomi-malaga
 pkgname=suomi-malaga-voikko
-#pkgname=($pkgbase-voikko $pkgbase-sukija)
+#pkgname=(suomi-malaga-voikko $pkgbase-sukija)
 pkgver=1.11
 pkgrel=1
 pkgdesc="A description of Finnish morphology written in Malaga."
@@ -13,24 +13,25 @@ license=('GPL2')
 makedepends=('python2' 'malaga>=7.12')
 conflicts=('suomi-malaga')
 provides=('suomi-malaga')
-source=(http://downloads.sourceforge.net/voikko/$pkgbase-$pkgver.tar.gz)
+source=(http://downloads.sourceforge.net/voikko/suomi-malaga-$pkgver.tar.gz)
 
 build() {
-  cd "$srcdir/$pkgbase-$pkgver"
+  cd "$srcdir/suomi-malaga-$pkgver"
 
   sed 's|PYTHON=python|PYTHON=python2|g' -i Makefile
   make voikko EXTRA_LEX=vocabulary/erikoisalat/linux-distributions.lex
-  make sukija EXTRA_LEX=vocabulary/erikoisalat/linux-distributions.lex
+#  make sukija EXTRA_LEX=vocabulary/erikoisalat/linux-distributions.lex
 }
 
 package_suomi-malaga-voikko() {
-  cd "$srcdir/$pkgbase-$pkgver"
+  cd "$srcdir/suomi-malaga-$pkgver"
+
   make voikko-install DESTDIR="$pkgdir/usr/lib/suomi-malaga"
 
 }
 
 package_suomi-malaga-sukija() {
-  cd "$srcdir/$pkgbase-$pkgver/sukija"
+  cd "$srcdir/suomi-malaga-$pkgver/sukija"
 
   mkdir -p "${pkgdir}/usr/lib/suomi-malaga/2/mor-standard"
   cp suomi.lex_l "${pkgdir}/usr/lib/suomi-malaga/2/mor-standard/sukija-fi_FI.lex_l"
