@@ -1,3 +1,5 @@
+Version 20120412
+ * Use TinyXML of the system, add it as dependency.
 Version 20120405
  * Update git submodules when recompiling
  * Fix git clean -dfx not working as intended
